package eapli.base.warehousemanagement.domain.warehouse;

public class Begin extends Size{
    public Begin(int lsquare, int wsquare) {
        super(lsquare, wsquare);
    }
}
