package eapli.base.warehousemanagement.domain.warehouse;

public class Depth extends Size{
    public Depth(int lsquare, int wsquare) {
        super(lsquare, wsquare);
    }
}
