package eapli.base.warehousemanagement.domain.warehouse;

public class End extends Size{

    public End(int lsquare, int wsquare) {
        super(lsquare, wsquare);
    }
}
