@startuml

Entity WareHousePlant<<entity root>> {
 -String description
 -int length
 -int width
 -int square
 -String unit
 -List<Aisle> listAisles
 -List<AGVDock> listAGVDock
}

Entity Aisle<<entity>>{
    -long id;
    -Begin begin
    -End end
    -Depth depth
    -Accessibility accessibility;
    -List<Row> listRows;
}

Entity Row<<entity>>{
    -long id;
    -Begin begin
    -End end
    -int shelves;
}

Entity AGVDock<<entity>>{
    -String id;
    -Begin begin;
    -End end;
    -Depth depth;
    -Accessibility accessibility;
}

class Accessibility<<value object>>{
    -String accessibility;

}

class Begin{
}

class End{
}

class Depth{

}

class Size{
    -int lsquare;
    -int wsquare;
}


WareHousePlant "1" -> "*"  AGVDock
WareHousePlant "1" -> "*" Aisle
Aisle "1" -> "1*" Row
Aisle "1" -> "1" Accessibility
Aisle "1" -> "1" Begin
Aisle "1" -> "1" End
Aisle "1" -> "1" Depth

Row "1" -> "1" Begin
Row "1" -> "1" End


AGVDock "1" -> "1" Begin
AGVDock "1" --> "1" End
AGVDock "1" -> "1" Depth

AGVDock "1" -> "1" Accessibility

Begin --> Size : extends
End -> Size : extends
Depth -> Size : extends

@enduml